<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonRun"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:background="#444444"
        android:fadeScrollbars="false"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/button_run_show"
        android:onClick="RunService"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:background="#444444"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/button_log_show"
        android:onClick="ReadLogs"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRun" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:background="#444444"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/button_clear_show"
        android:onClick="ClearLogs"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintBottom_toTopOf="@+id/buttonStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginBottom="144dp"
        android:background="#444444"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/button_stop_show"
        android:onClick="StopService"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="#444444"
        android:fontFamily="monospace"
        android:hint="@string/button_set"
        android:onClick="Settings"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSwitch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#444444"
        android:hint="@string/button_language_show"
        android:onClick="SetLanguage"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#444444"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#444444"
        android:hint="@string/vtext_version"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>